WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139843
Fix initial / inherit support for '-webkit-perspective-origin' CSS property
https://bugs.webkit.org/show_bug.cgi?id=139843
Summary
Fix initial / inherit support for '-webkit-perspective-origin' CSS property
Chris Dumez
Reported
2014-12-19 15:50:17 PST
Improve -webkit-perspective-origin-x / -webkit-perspective-origin-y support. Right now, the StyleBuilder support for these properties is broken and they are unimplemented in CSSComputedStyleDeclaration.
Attachments
Patch
(18.15 KB, patch)
2014-12-19 17:16 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2014-12-19 17:16:24 PST
Created
attachment 243593
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-19 19:41:53 PST
Comment on
attachment 243593
[details]
Patch Clearing flags on attachment: 243593 Committed
r177616
: <
http://trac.webkit.org/changeset/177616
>
WebKit Commit Bot
Comment 3
2014-12-19 19:42:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug