Fix initial / inherit support for '-webkit-perspective-origin' CSS property https://bugs.webkit.org/show_bug.cgi?id=139843

Reviewed by Simon Fraser.

Source/WebCore:

Fix initial / inherit support for '-webkit-perspective-origin' CSS
property. These previously had no effect.

This patch updates the code to be consistent with
'-webkit-transform-origin' and gets rid of the code in
DeprecatedStyleBuilder as it isn't used.

Test: fast/css/perspective-origin-initial-inherit.html

* css/DeprecatedStyleBuilder.cpp:
(WebCore::DeprecatedStyleBuilder::DeprecatedStyleBuilder):
(WebCore::ApplyPropertyPerspectiveOrigin::applyInheritValue): Deleted.
(WebCore::ApplyPropertyPerspectiveOrigin::applyInitialValue): Deleted.
(WebCore::ApplyPropertyPerspectiveOrigin::applyValue): Deleted.
(WebCore::ApplyPropertyPerspectiveOrigin::createHandler): Deleted.
* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue):
(WebCore::StyleProperties::asText):
* css/StylePropertyShorthand.cpp:
(WebCore::webkitPerspectiveOriginShorthand):
(WebCore::shorthandForProperty):
(WebCore::matchingShorthandsForLonghand):
* css/StylePropertyShorthand.h:
* css/StyleResolver.cpp:
(WebCore::StyleResolver::applyProperty):

LayoutTests:

Add layout test to cover 'initial' / 'inherit' support for
'-webkit-perspective-origin' CSS property.

* fast/css/perspective-origin-initial-inherit-expected.txt: Added.
* fast/css/perspective-origin-initial-inherit.html: Added.


Canonical link: https://commits.webkit.org/157778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177616 268f45cc-cd09-0410-ab3c-d52691b4dbfc